made header and nav bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<div class="wrapper">
+		<header>
+			<h1>Phils Sausages</h1>
+			<p>Vegan Sausages Made in New Zealand</p>
+		</header>
+		<nav>
+			<ul>
+				<li>About Us</li>
+				<li>Our Products</li>
+				<li>Contact</li>
+			</ul>
+		</nav>
+		
+
+	</div>
 </body>
 </html>
