made the sausages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
 				<li>Contact</li>
 			</ul>
 		</nav>
-		
+		<section>
+			<article class="sausages">
+				<img src="" alt="">
+				<h3>lorem ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+			</article>
+			<article class="sausages">
+				<img src="" alt="">
+				<h3>lorem ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+			</article>
+			<article class="sausages">
+				<img src="" alt="">
+				<h3>lorem ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+			</article>
+		</section>
 
 	</div>
 </body>
