made map section and address parts

--- a/index.html
+++ b/index.html
@@ -19,21 +19,39 @@
 				<li>Contact</li>
 			</ul>
 		</nav>
-		<section>
-			<article class="sausages">
+		<section class="products">
+			<article class="sausage">
 				<img src="" alt="">
 				<h3>lorem ipsum</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
 			</article>
-			<article class="sausages">
+			<article class="sausage">
 				<img src="" alt="">
 				<h3>lorem ipsum</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
 			</article>
-			<article class="sausages">
+			<article class="sausage">
 				<img src="" alt="">
 				<h3>lorem ipsum</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+			</article>
+		</section>
+		<section class="contact">
+			<div class="map"></div>
+			<article class="shops">
+				<img src="" alt="">
+				<h3>Shop Name</h3>
+				<p>123 fake street Auckland, New Zealand</p>
+			</article>
+			<article class="shops">
+				<img src="" alt="">
+				<h3>Shop Name</h3>
+				<p>123 fake street Auckland, New Zealand</p>
+			</article>
+			<article class="shops">
+				<img src="" alt="">
+				<h3>Shop Name</h3>
+				<p>123 fake street Auckland, New Zealand</p>
 			</article>
 		</section>
 
