--- a/index.html
+++ b/index.html
@@ -4,39 +4,40 @@
 	<meta charset="UTF-8">
 	<title>Phil's Sausages</title>
 	<link rel="stylesheet" href="normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Shrikhand" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<header>
+		<h1>Phils Sausages</h1>
+		<p>Vegan Sausages Made in New Zealand</p>
+	</header>
+	<nav>
+		<ul>
+			<li>About Us</li>
+			<li>Our Products</li>
+			<li>Contact</li>
+		</ul>
+	</nav>
 	<div class="wrapper">
-		<header>
-			<h1>Phils Sausages</h1>
-			<p>Vegan Sausages Made in New Zealand</p>
-		</header>
-		<nav>
-			<ul>
-				<li>About Us</li>
-				<li>Our Products</li>
-				<li>Contact</li>
-			</ul>
-		</nav>
 		<section class="products">
 			<article class="sausage">
-				<img src="" alt="">
-				<h3>lorem ipsum</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+				<img src="assets/sau1.jpg" alt="">
+				<h3>Sausage Name</h3>
+				<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
 			</article>
 			<article class="sausage">
-				<img src="" alt="">
-				<h3>lorem ipsum</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+				<img src="assets/sau1.jpg" alt="">
+				<h3>Sausage Name</h3>
+				<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
 			</article>
 			<article class="sausage">
-				<img src="" alt="">
-				<h3>lorem ipsum</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+				<img src="assets/sau1.jpg" alt="">
+				<h3>Sausage Name</h3>
+				<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
 			</article>
 		</section>
-		
+
 		<section class="contact">
 			<div class="map"></div>
 			<article class="shops">
@@ -55,7 +56,7 @@
 				<p>123 fake street Auckland, New Zealand</p>
 			</article>
 		</section>
-
+			
 	</div>
 </body>
 </html>
