added pictures and rounded edges

--- a/index.html
+++ b/index.html
@@ -22,19 +22,37 @@
 	<div class="wrapper">
 		<section class="products">
 			<article class="sausage">
-				<img src="assets/sau1.jpg" alt="">
-				<h3>Sausage Name</h3>
-				<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+				<div class="imgcrp">
+					<img src="assets/sau1.jpg" alt="">
+				</div>
+				<div class="text">
+					<h3>Sausage Name</h3>
+					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
+						 neque libero, dapibus nec.
+					</p>
+				</div>
 			</article>
 			<article class="sausage">
-				<img src="assets/sau1.jpg" alt="">
-				<h3>Sausage Name</h3>
-				<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+				<div class="imgcrp">
+					<img src="assets/sau1.jpg" alt="">
+				</div>
+				<div class="text">
+					<h3>Sausage Name</h3>
+					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
+						 neque libero, dapibus nec.
+					</p>
+				</div>
 			</article>
 			<article class="sausage">
-				<img src="assets/sau1.jpg" alt="">
-				<h3>Sausage Name</h3>
-				<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras neque libero, dapibus nec.</p>
+				<div class="imgcrp">
+					<img src="assets/sau1.jpg" alt="">
+				</div>
+				<div class="text">
+					<h3>Sausage Name</h3>
+					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
+						 neque libero, dapibus nec.
+					</p>
+				</div>
 			</article>
 		</section>
 
