added new resources and added comments to css file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="imgcrp">
 					<img src="assets/sau1.jpg" alt="">
 				</div>
-				<div class="text">
+				<div class="txt">
 					<h3>Sausage Name</h3>
 					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
 						 neque libero, dapibus nec.
@@ -36,9 +36,9 @@
 				<div class="imgcrp">
 					<img src="assets/sau1.jpg" alt="">
 				</div>
-				<div class="text">
+				<div class="txt">
 					<h3>Sausage Name</h3>
-					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
+					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras 
 						 neque libero, dapibus nec.
 					</p>
 				</div>
@@ -47,7 +47,7 @@
 				<div class="imgcrp">
 					<img src="assets/sau1.jpg" alt="">
 				</div>
-				<div class="text">
+				<div class="txt">
 					<h3>Sausage Name</h3>
 					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
 						 neque libero, dapibus nec.
@@ -58,21 +58,23 @@
 
 		<section class="contact">
 			<div class="map"></div>
-			<article class="shops">
-				<img src="" alt="">
-				<h3>Shop Name</h3>
-				<p>123 fake street Auckland, New Zealand</p>
-			</article>
-			<article class="shops">
-				<img src="" alt="">
-				<h3>Shop Name</h3>
-				<p>123 fake street Auckland, New Zealand</p>
-			</article>
-			<article class="shops">
-				<img src="" alt="">
-				<h3>Shop Name</h3>
-				<p>123 fake street Auckland, New Zealand</p>
-			</article>
+			<div class="shops">
+				<article class="address">
+					<img src="" alt="">
+					<h3>Shop Name</h3>
+					<p>123 fake street Auckland, New Zealand</p>
+				</article>
+				<article class="address">
+					<img src="" alt="">
+					<h3>Shop Name</h3>
+					<p>123 fake street Auckland, New Zealand</p>
+				</article>
+				<article class="address">
+					<img src="" alt="">
+					<h3>Shop Name</h3>
+					<p>123 fake street Auckland, New Zealand</p>
+				</article>
+			</div>
 		</section>
 			
 	</div>
