made footer, basic styling

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</article>
 		</section>
 
-		<section class="contact">
+		<section class="location">
 			<div class="map"></div>
 			<div class="shops">
 				<article class="address">
@@ -76,7 +76,18 @@
 				</article>
 			</div>
 		</section>
+
+		
 			
 	</div>
+	<footer>
+			<div class="contact">
+				<p>Email: fakeone@gmail.com</p>
+				<p>Phone: 123456789</p>
+				<p>twitter handle</p>
+			</div>
+			<p>site design and logo blah blah blah</p>
+		</footer>
+		
 </body>
 </html>
