--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 			<div class="map"></div>
 			<div class="shops">
 				<article class="address">
-					<img src="" alt="">
+					<img src="assets/bio-markt.png" alt="">
 					<h3>Shop Name</h3>
 					<p>123 fake street Auckland, New Zealand</p>
 				</article>
 				<article class="address">
-					<img src="" alt="">
+					<img src="assets/veganz.png" alt="">
 					<h3>Shop Name</h3>
 					<p>123 fake street Auckland, New Zealand</p>
 				</article>
