added meta tag in HTML, restart CSS

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Phil's Sausages</title>
 	<link rel="stylesheet" href="normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Shrikhand" rel="stylesheet">
@@ -9,8 +10,10 @@
 </head>
 <body>
 	<header>
-		<h1>Phils Sausages</h1>
-		<p>Vegan Sausages Made in New Zealand</p>
+		<div class="hdrtxt">
+			<h1>Phils Sausages</h1>
+			<p>Vegan Sausages Made in <br> New Zealand</p>
+		</div>
 	</header>
 	<nav>
 		<ul>
