added comments and padding

--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 	<title>Phil's Sausages</title>
 	<link rel="stylesheet" href="normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Shrikhand" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--======================== HEADER ========================-->
 	<header>
 		<div class="hdrtxt">
 			<h1>Phils Sausages</h1>
 			<p>Vegan Sausages Made in <br> New Zealand</p>
 		</div>
 	</header>
+<!--======================== NAVBAR ========================-->
 	<nav>
 		<ul>
 			<li>About Us</li>
-			<li>Our Products</li>
+			<li>Products</li>
 			<li>Contact</li>
 		</ul>
 	</nav>
+<!--======================== WRAPPER ========================-->
 	<div class="wrapper">
+<!--======================== PRODUCTS ========================-->
 		<section class="products">
 			<article class="sausage">
 				<div class="imgcrp">
@@ -58,7 +64,7 @@
 				</div>
 			</article>
 		</section>
-
+<!--======================== MAP / SHOPS ========================-->
 		<section class="location">
 			<div class="map"></div>
 			<div class="shops">
@@ -79,10 +85,8 @@
 				</article>
 			</div>
 		</section>
-
-		
-			
 	</div>
+<!--======================== FOOTER / CONTACT ========================-->
 	<footer>
 			<div class="contact">
 				<p>Email: fakeone@gmail.com</p>
@@ -91,6 +95,8 @@
 			</div>
 			<p>site design and logo blah blah blah</p>
 		</footer>
-		
 </body>
 </html>
+
+
+
