made new nav bar

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <!--======================== NAVBAR ========================-->
 	<nav>
 		<ul>
-			<li>About Us</li>
-			<li>Products</li>
-			<li>Contact</li>
+			<li id="about"><a href="">About us</a></li>
+			<li id="products"><a href="">Products</a></li>
+			<li id="Locations"><a href="">Locations</a></li>
 		</ul>
 	</nav>
 <!--======================== WRAPPER ========================-->
@@ -36,7 +36,7 @@
 				</div>
 				<div class="txt">
 					<h3>Sausage Name</h3>
-					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
+					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras 
 						 neque libero, dapibus nec.
 					</p>
 				</div>
@@ -58,7 +58,7 @@
 				</div>
 				<div class="txt">
 					<h3>Sausage Name</h3>
-					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing 	 elit. Donec at tincidunt eros, at congue eros. Cras 
+					<p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Donec at tincidunt eros, at congue eros. Cras 
 						 neque libero, dapibus nec.
 					</p>
 				</div>
