--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</section>
 <!--======================== MAP / SHOPS ========================-->
 		<section class="location">
-			<div class="map"></div>
+			<div id="map"></div>
 			<div class="shops">
 				<article class="address">
 					<img src="assets/bio-markt.png" alt="">
@@ -88,13 +88,25 @@
 	</div>
 <!--======================== FOOTER / CONTACT ========================-->
 	<footer>
-			<div class="contact">
-				<p>Email: fakeone@gmail.com</p>
-				<p>Phone: 123456789</p>
-				<p>twitter handle</p>
-			</div>
-			<p>site design and logo blah blah blah</p>
-		</footer>
+		<div class="contact">
+			<p>Email: fakeone@gmail.com</p>
+			<p>Phone: 123456789</p>
+			<p>twitter handle</p>
+		</div>
+		<p class="legalese">site design and logo blah blah blah</p>
+	</footer>
+
+	<script>
+function myMap() {
+  var mapCanvas = document.getElementById("map");
+  var mapOptions = { center: new google.maps.LatLng(-36.858299, 174.761066), zoom: 5 };
+  var map = new google.maps.Map(mapCanvas, mapOptions);
+  var marker = new google.maps.Marker({position:myCenter});
+  marker.setMap(map);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCr9DPw9sQbp95s7nrvqultFeoXTyoygOg&callback=myMap"></script>
 </body>
 </html>
 
