finished sticky navbar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</ul>
 	</nav>
 <!--======================== WRAPPER ========================-->
-	<div class="wrapper">
+	<div class="wrapper content">
 <!--======================== ABOUT ========================-->
 		<section id="about">
 			<img id="the_cook" src="assets/phil_katie.jpg" alt="">
