formatted partner logos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<title>Phil's Sausages</title>
 	<link rel="stylesheet" href="normalize.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Shrikhand" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<!-- <script src="maps.js"></script>  -->
@@ -32,16 +34,17 @@
 	<div class="wrapper content">
 <!--======================== ABOUT ========================-->
 		<section id="about">
+			<h1 class="title">WELCOME</h1>
 			<img id="the_cook" src="assets/phil_katie.jpg" alt="">
 			<div class="abttxt">
-				<h1 class="title">WELCOME</h1>
+				
 				<p>Donec interdum lorem dui, sed feugiat leo ultrices in. Vivamus risus ligula, bibendum in ornare ac, tempor non sapien. In aliquam laoreet velit vitae accumsan. Praesent lacinia, erat vitae lobortis blandit, nisi nibh porta ex, id pharetra orci tellus et urna. Morbi justo mauris, convallis non ultricies congue, lacinia vitae arcu. Nullam semper egestas ligula, nec malesuada lacus mattis sit amet. In vel scelerisque felis, ut malesuada dui. Mauris vel dui ante. Suspendisse maximus, lorem in tristique condimentum, tellus dui pretium augue, vel sagittis risus mauris id est. Nulla lacinia venenatis sollicitudin. Proin ac faucibus est. Nulla vulputate, eros sit amet consectetur euismod, diam libero dignissim sapien, in efficitur lectus diam consequat ipsum.
 				</p>
 			</div>
 		</section>
 <!--======================== PRODUCTS ========================-->
 		<section id="products">
-			<h1>OUR PRODUCTS</h1>
+			<h1 class="title">OUR PRODUCTS</h1>
 			<article class="sausage">
 				<div class="imgcrp">
 					<img src="assets/sau1.jpg" alt="">
@@ -82,7 +85,7 @@
 			<div id="map"></div>
 			<div class="shops">
 				<h1 class="title">OUR PARTNERS</h1>
-				<article class="address">
+				<article class="top-address address">
 					<img class="logo" src="assets/bio-markt.png" alt="">
 					<h3>Shop Name</h3>
 					<p>123 fake street<br>Fake area<br> Auckland 1234 <br>New Zealand</p>
